<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/profile_image_view"
        android:layout_width="240dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <TextView
        android:id="@+id/profile_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profile_image_view"
        app:layout_constraintStart_toStartOf="@+id/profile_image_view"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_view"
        android:text="@string/profile_name" />

    <TextView
        android:id="@+id/profile_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_name_tv"
        app:layout_constraintStart_toStartOf="@+id/profile_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_tv"
        android:text="@string/profile_role" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_name_tv"
        app:layout_constraintStart_toStartOf="@+id/profile_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/profile_role"
        android:text="@string/profile_email" />


</androidx.constraintlayout.widget.ConstraintLayout>